# mba-ia-desafio-ingestao-busca

./: INSTRUCTIONS.md  README.md  docker-compose.yml  main.py  pyproject.toml
src/: chat.py  ingest.py  search.py
