[project]
name = "desafio-ingestao-busca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-google-genai==2.1.9",
    "langchain-openai==0.3.30",
    "langchain-postgres==0.0.15",
    "langchain-text-splitters==0.3.9",
    "psycopg-binary==3.2.9",
    "pypdf==6.0.0",
    "python-dotenv==1.1.1",
    "poethepoet>=0.37.0",
]


[tool.poe.tasks.chat]
cmd = "python src/chat.py"

[tool.poe.tasks.ingest]
cmd = "python src/ingest.py"

